recipes/bitnami/mongodb/19.0.9/CATALOG.md
<!-- Generated by npm run catalog:maps. Do not edit by hand. -->

# bitnami/mongodb 19.0.9 Catalog Map

This page makes the artifact chain explicit:

```text
chart -> recipe -> variants -> variant revisions -> package bases -> receipts
```

## Status

| Field | Value |
| --- | --- |
| Chart | bitnami/mongodb@19.0.9 |
| Catalog status | catalog-candidate |
| Support level | promotion-review-needed |
| Supported scopes | none |
| Production readiness | not-reviewed-for-production |
| Supported variants | none |
| Candidate variants | static-passwords, existing-secret-replicaset |
| Control points | capability-profile, dependency-lock, generated-facts, hook-policy, image-digest, installer-support-object, network-policy, pdb-policy, pvc-policy, replicaset-topology, source-lock, stateful-workload, target-facts, tpl |

## Feature And Proof Summary

This is the chart-level summary. Use the variant table and receipt links below
for exact base-variant evidence.

| Field | Value |
| --- | --- |
| Adoption bucket | - |
| User status | - |
| Strongest evidence | - |
| Proof lanes | render parity 2/2; ConfigHub 2/2; local live 2/2; GitOps live 1/2; live parity 1/2 |
| Feature summary | none-recorded |
| Hard gap | - |
| Next action | - |

## Artifact Chain

| Stage | Artifact |
| --- | --- |
| Source chart lock | [recipes/bitnami/mongodb/19.0.9/source-lock.yaml](source-lock.yaml) |
| Dependency lock | [recipes/bitnami/mongodb/19.0.9/dependency-lock.yaml](dependency-lock.yaml) |
| Recipe | [recipes/bitnami/mongodb/19.0.9/recipe.yaml](recipe.yaml) |
| Helm plan | [recipes/bitnami/mongodb/19.0.9/helm-plan.yaml](helm-plan.yaml) |
| Chart dossier | [recipes/bitnami/mongodb/19.0.9/chart-dossier.yaml](chart-dossier.yaml) |
| Control points | [recipes/bitnami/mongodb/19.0.9/control-points.yaml](control-points.yaml) |
| Value model | [recipes/bitnami/mongodb/19.0.9/value-model.yaml](value-model.yaml) |
| GitOps runtime review | [recipes/bitnami/mongodb/19.0.9/gitops-runtime-review.yaml](gitops-runtime-review.yaml) |
| Catalog status | [recipes/bitnami/mongodb/19.0.9/catalog-status.yaml](catalog-status.yaml) |
| Helm pain report | [recipes/bitnami/mongodb/19.0.9/helm-pain-report.yaml](helm-pain-report.yaml) |
| Installer package OCI | `oci://europe-west1-docker.pkg.dev/nth-fort-499605-q5/helm-expt/bitnami-mongodb:19.0.9@sha256:37930a411e8fbd975677a68a10a1790bacfbd20d4661848d4cbbec3d728061a1` |
| Installer package source | [packages/bitnami/mongodb/19.0.9](../../../../packages/bitnami/mongodb/19.0.9) |
| Installer package receipt | [recipes/bitnami/mongodb/19.0.9/publication/installer-package-receipt.yaml](publication/installer-package-receipt.yaml) |
| Machine index | [recipes/bitnami/mongodb/19.0.9/artifact-index.yaml](artifact-index.yaml) |

## Variants

| Variant | Variant file | Package base | Revision | Helm objects | cub installer objects | Match | Helm equivalence | Scan | Gate | Target facts |
| --- | --- | --- | --- | --- | --- | --- | --- | --- | --- | --- |
| static-passwords | [recipes/bitnami/mongodb/19.0.9/variants/static-passwords/variant.yaml](variants/static-passwords/variant.yaml) | [packages/bitnami/mongodb/19.0.9/bases/static-passwords](../../../../packages/bitnami/mongodb/19.0.9/bases/static-passwords) | [recipes/bitnami/mongodb/19.0.9/revisions/static-passwords/r001/variant-revision.yaml](revisions/static-passwords/r001/variant-revision.yaml) | 8 | 9 | 8/8 | pass | warn | warn | none |
| existing-secret-replicaset | [recipes/bitnami/mongodb/19.0.9/variants/existing-secret-replicaset/variant.yaml](variants/existing-secret-replicaset/variant.yaml) | [packages/bitnami/mongodb/19.0.9/bases/existing-secret-replicaset](../../../../packages/bitnami/mongodb/19.0.9/bases/existing-secret-replicaset) | [recipes/bitnami/mongodb/19.0.9/revisions/existing-secret-replicaset/r001/variant-revision.yaml](revisions/existing-secret-replicaset/r001/variant-revision.yaml) | 10 | 11 | 10/10 | pass | warn | warn | required Secret mongodb/mongodb-auth keys mongodb-root-password,mongodb-replica-set-key |

## Package Bases

| Base | Path | Default | Description |
| --- | --- | --- | --- |
| static-passwords | [packages/bitnami/mongodb/19.0.9/bases/static-passwords](../../../../packages/bitnami/mongodb/19.0.9/bases/static-passwords) | no | mongodb static password demo variant rendered from bitnami/mongodb@19.0.9 |
| existing-secret-replicaset | [packages/bitnami/mongodb/19.0.9/bases/existing-secret-replicaset](../../../../packages/bitnami/mongodb/19.0.9/bases/existing-secret-replicaset) | yes | mongodb existing Secret default variant rendered from bitnami/mongodb@19.0.9 |

## Receipts

| Variant | Revision | Receipt | Kind | Result | Path |
| --- | --- | --- | --- | --- | --- |
| static-passwords | r001 | render | RenderReceipt | recorded | [recipes/bitnami/mongodb/19.0.9/revisions/static-passwords/r001/receipts/render-receipt.yaml](revisions/static-passwords/r001/receipts/render-receipt.yaml) |
| static-passwords | r001 | helmEquivalence | HelmEquivalenceReceipt | pass | [recipes/bitnami/mongodb/19.0.9/revisions/static-passwords/r001/receipts/helm-equivalence-receipt.yaml](revisions/static-passwords/r001/receipts/helm-equivalence-receipt.yaml) |
| static-passwords | r001 | scan | ScanReceipt | warn | [recipes/bitnami/mongodb/19.0.9/revisions/static-passwords/r001/receipts/scan-receipt.yaml](revisions/static-passwords/r001/receipts/scan-receipt.yaml) |
| static-passwords | r001 | installGate | InstallGate | warn | [recipes/bitnami/mongodb/19.0.9/revisions/static-passwords/r001/receipts/install-gate.yaml](revisions/static-passwords/r001/receipts/install-gate.yaml) |
| existing-secret-replicaset | r001 | render | RenderReceipt | recorded | [recipes/bitnami/mongodb/19.0.9/revisions/existing-secret-replicaset/r001/receipts/render-receipt.yaml](revisions/existing-secret-replicaset/r001/receipts/render-receipt.yaml) |
| existing-secret-replicaset | r001 | helmEquivalence | HelmEquivalenceReceipt | pass | [recipes/bitnami/mongodb/19.0.9/revisions/existing-secret-replicaset/r001/receipts/helm-equivalence-receipt.yaml](revisions/existing-secret-replicaset/r001/receipts/helm-equivalence-receipt.yaml) |
| existing-secret-replicaset | r001 | scan | ScanReceipt | warn | [recipes/bitnami/mongodb/19.0.9/revisions/existing-secret-replicaset/r001/receipts/scan-receipt.yaml](revisions/existing-secret-replicaset/r001/receipts/scan-receipt.yaml) |
| existing-secret-replicaset | r001 | installGate | InstallGate | warn | [recipes/bitnami/mongodb/19.0.9/revisions/existing-secret-replicaset/r001/receipts/install-gate.yaml](revisions/existing-secret-replicaset/r001/receipts/install-gate.yaml) |

## Current Install Shape

```sh
cub installer setup --pull oci://europe-west1-docker.pkg.dev/nth-fort-499605-q5/helm-expt/bitnami-mongodb:19.0.9@sha256:37930a411e8fbd975677a68a10a1790bacfbd20d4661848d4cbbec3d728061a1 --base <variant> --work-dir <tmp> --non-interactive --namespace <namespace>
```

Use the variant table above to choose the package base. The `oci://` ref is
the public package users pull; the `packages/...` path is the repo source path
used by maintainers and proof scripts. The proof path compares regular Helm
output with real `cub installer setup` output and explains every intentional
difference, such as the Namespace support object or separated Secrets.
